# Pyframe

./: .gitignore  README.md  pyproject.toml  repeat.py  unicode.py
examples/: menu.py  speech_bubble.py  titles.py
pyframe/: ansi.py  cell.py  colors.py  frame.py  grid.py  main.py  mat.py  speech_bubble.py  textbox.py  types_.py  vector.py
pyframe/border/: border_type.py  border_types.py  junction.py  junction_table.py  junctions.json
pyframe/frames/: frame.py  map.py  menu.py  npc.py  weather.py
pyframe/frames/border/: border_type.py
pyframe/grid/: cell.py  emoji.py  matrix.py  nested.py  point.py  range.py
pyframe/grid copy/: .py  coord.py  range.py  size.py
pyframe/screen/text/map/: map.py
unicode/: characters.json  chars.py
