[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyframe"
dynamic = ["version"]
authors = [{ name = "Jacob Ophoven" }]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
]

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
    "",
] # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }
